--- a/src/index.html
+++ b/src/index.html
@@ -7,49 +7,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>刘洋的简历 cv-1-version</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        *::before {
-            box-sizing: border-box;
-        }
-
-        *::after {
-            box-sizing: border-box;
-        }
-
-        #html {
-            word-break: break-all;
-        }
-
-        #div-1 {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        @media (max-width:500px) {
-            #html {
-                height: 50vh;
-                overflow: auto;
-            }
-
-            #div-1-wrapper {
-                height: 50vh;
-            }
-
-            #div-1 {
-                position: relative;
-                top: 20px;
-                right: 0;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
